// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emoji rendering 1 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "rgb(10,10,10)",
        "lineHeight": 23,
      }
    }
  >
    test 
  </Text>
  <Image
    source={
      Object {
        "uri": "https://notes.ipieter.be/chat/emojis/no-words.png",
      }
    }
    style={
      Object {
        "height": 20,
        "width": 20,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "rgb(10,10,10)",
        "lineHeight": 23,
      }
    }
  >
     test
  </Text>
</View>
`;

exports[`Emoji rendering 2 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "rgb(10,10,10)",
        "lineHeight": 23,
      }
    }
  />
  <Image
    source={
      Object {
        "uri": "https://notes.ipieter.be/chat/emojis/no-words.png",
      }
    }
    style={
      Object {
        "height": 64,
        "width": 64,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "rgb(10,10,10)",
        "lineHeight": 23,
      }
    }
  />
</View>
`;

exports[`Emoji rendering 3 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "rgb(10,10,10)",
        "lineHeight": 23,
      }
    }
  >
    Test
  </Text>
</View>
`;
